--- a/ParkinngLot/ParkinngLot/ParkingLot.csproj
+++ b/ParkinngLot/ParkinngLot/ParkingLot.csproj
@@ -20,6 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="View\" />
+    <EmbeddedResource Update="View\Page1.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
