Añadiendo MVVM de login

--- a/ParkinngLot/ParkinngLot/ParkingLot.csproj
+++ b/ParkinngLot/ParkinngLot/ParkingLot.csproj
@@ -17,11 +17,17 @@
     <Compile Condition=" '$(EnableDefaultCompileItems)' == 'true' " Update="MainPage.xaml.cs">
       <DependentUpon>*.xaml</DependentUpon>
     </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Update="View\Page1.xaml">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-    </EmbeddedResource>
+    <Compile Update="View\HomeView.xaml.cs">
+      <DependentUpon>HomeView.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="View\LoginView.xaml.cs">
+      <DependentUpon>LoginView.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="View\RecoverPView.xaml.cs">
+      <DependentUpon>RecoverPView.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="View\SignInView.xaml.cs">
+      <DependentUpon>SignInView.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
